@@ -1,0 +1,11 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA256
+
+DIST residualvm-0.1.0-sources.tar.bz2 4704016 SHA256 faace790d974da08133277c2bf22e0cc36a69e0bf70e3cfcd252be745b42fa83 SHA512 acb477e11f0fa230e52f6b961ef421514a98811f43dd25b4d8653af94b72c764f815f3806928b50526499053875fe4d06e3a69c8faf6ec57eca97b4bf7b860fd WHIRLPOOL e838ac4d0de9079f37d806e03428581339b6718dac9add5e4e03a8678598ed2c85e71a377f7bca8af223615873ffc8f0d116fe7b1097158142a3c38094ef4198
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.19 (GNU/Linux)
+
+iF4EAREIAAYFAlDnB2EACgkQz+A7F6AY3oxtXQD8C1/huS7uwDzdmrufzOVQRmd8
+JX16TWxWAFJCdquEcQ0A/0pT9QBn6S6gSNIU0X0rynmx4wbSrwrPUdQ6DRDxZDiN
+=Zq33
+-----END PGP SIGNATURE-----
