@@ -16,9 +16,6 @@ A cross-platform 3D game interpreter for play LucasArts' LUA-based 3D adventures
     <flag name='fluidsynth'>Enable fluidsynth support</flag>
 </use>
 <use>
-    <flag name='mpeg2'>Enable mpeg2 codec for cutscenes</flag>
-</use>
-<use>
     <flag name='nasm'>Enable nasm assebler inlines</flag>
 </use>
 </pkgmetadata>
