@@ -1,6 +1,13 @@
 # ChangeLog for games-engines/residualvm
-# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+*residualvm-0.1.0 (04 Jan 2013)
+
+  04 Jan 2013; Azamat H. Hackimov <azamat.hackimov@gmail.com>
+  +residualvm-0.1.0.ebuild, -residualvm-9999.ebuild, metadata.xml:
+  [games-engines/residualvm] First version 0.1.0 with tarball, remove 9999 as
+  broken.
 
 *residualvm-9999 (16 Apr 2012)
 
@@ -8,4 +15,3 @@
   +residualvm-9999.ebuild:
   pkgmove games-engines/residual to games-engines/residualvm
   Major ebuild enchancement.
-
